// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAllDays should get array of only school days 1`] = `
Array [
  "Monday",
  "Tuesday",
  "Wednesday",
  "Thursday",
  "Friday",
  "Saturday",
  "Sunday",
]
`;

exports[`getSchoolDays should get array of only school days 1`] = `
Array [
  "Monday",
  "Tuesday",
  "Wednesday",
  "Thursday",
  "Friday",
  "Saturday",
]
`;

exports[`getWeekdays should get array of only weekdays 1`] = `
Array [
  "Monday",
  "Tuesday",
  "Wednesday",
  "Thursday",
  "Friday",
]
`;
